hphp/test/zend/good/ext/curl/tests/curl_setopt_CURLOPT_READFUNCTION.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!extension_loaded("curl")) print "skip cURL extension not loaded";
}
