hphp/test/zend/bad/ext/curl/tests/curl_setopt_CURLOPT_FOLLOWLOCATION_open_basedir.php.skipif
<?php
if (!extension_loaded("curl")) print "skip cURL not loaded";
?>